Fixed tag add bad alignment

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -201,3 +201,7 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
 }
+
+.tag-add {
+    overflow: hidden;
+}
